typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts.stderr
error: UndefinedSymbol {
    sym: Atom('d' type=inline),
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts:1:5
  |
1 | for(d in _.jh[a]=_.jh[a]||[],b);
  |     ^

error: UndefinedSymbol {
    sym: Atom('_' type=inline),
    span: Span {
        lo: BytePos(
            9,
        ),
        hi: BytePos(
            10,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts:1:10
  |
1 | for(d in _.jh[a]=_.jh[a]||[],b);
  |          ^

error: UndefinedSymbol {
    sym: Atom('a' type=inline),
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            15,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts:1:15
  |
1 | for(d in _.jh[a]=_.jh[a]||[],b);
  |               ^

error: UndefinedSymbol {
    sym: Atom('_' type=inline),
    span: Span {
        lo: BytePos(
            17,
        ),
        hi: BytePos(
            18,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts:1:18
  |
1 | for(d in _.jh[a]=_.jh[a]||[],b);
  |                  ^

error: UndefinedSymbol {
    sym: Atom('a' type=inline),
    span: Span {
        lo: BytePos(
            22,
        ),
        hi: BytePos(
            23,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts:1:23
  |
1 | for(d in _.jh[a]=_.jh[a]||[],b);
  |                       ^

error: UndefinedSymbol {
    sym: Atom('b' type=inline),
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement3.ts:1:30
  |
1 | for(d in _.jh[a]=_.jh[a]||[],b);
  |                              ^

